# Best-AI-Trading-Crypto-via-Freqtrade

./: .env  .replit  README.md  README_AI_PROFIT_OPTIMIZER.md  ai_profit_optimizer.py  install.bat  install_amd_gpu.bat  market_sentiment.py  migrate.ts  monitoring.py  package-lock.json  package.json  pair_ranking.py  pyproject.toml  replit.nix  run.bat  run_freqtrade.py  scheduler.py  setup_config.py  setup_workflow.py  simulation.py  strategy_assessment.md  test.js  theme.json  train_ai_models.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: account-summary.tsx  backtest-results.tsx  bot-status.tsx  market-analysis.tsx  (+3 more)
config/: backtest_config.json  config.json
migrations/: 0000_silky_eternity.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: ai-service.ts  backtest-service.ts  binance-api.ts  db.ts  routes.ts  storage.ts  technical-analysis.ts
shared/: schema.ts  types.ts
user_data/strategies/: DCA_OrderBlock_Strategy_15m.py  DoubleSMA_ATR_Trailing_README.md  Elliot_Waves_README.md  FVG_OrderBlock_Strategy.py  FractalHullMA_Strategy.py  HeikinAshi_ADX_RSI_README.md  HeikinAshi_ADX_RSI_Strategy.py  HighFrequencyTrendStrategy_README.md  IchimokuSqueezeMomentum_README.md  MomentumPinbar_README.md  MomentumPinbar_Strategy.py  PivotPointFib_README.md  PivotPointFib_Strategy.py  SupertrendRSIMACD_README.md  SupertrendRSIMACD_Strategy.py  Swing_DCA_Strategy_4h.py  TEMA_VWAP_README.md  TEMA_VWAP_Strategy.py  VolumeProfile_Strategy.py  WaveTrend_MTF_Strategy.py  enhanced_crypto_strategy.py  strategies.rar
(+42 files in other folders)
